--- a/public/html/tudanghia.html
+++ b/public/html/tudanghia.html
@@ -8,10 +8,9 @@
   <style>
    
     .container {
-      max-width: 1000px;
+      max-width: 900px;
       margin: auto;
       background: white;
-      padding-top: 50px;
       padding-left: 50px;
       padding-right: 50px;
       border-radius: 8px;
@@ -25,37 +24,29 @@
       padding: 15px 0;
     }
     .word-title {
-      font-weight: bold;
+      font-weight: 700;
       font-size: 22px;
       color: #005f73;
       margin-bottom: 6px;
     }
     .meanings {
-      font-style: italic;
+      font-style: italic; /* chữ nghiêng */
       color: #0a9396;
       margin-bottom: 8px;
     }
     ul {
       padding-left: 20px;
-      margin: 5px 0 15px 0;
+      
       color: #333;
     }
     ul.examples li {
       margin-bottom: 6px;
-      line-height: 1.4;
+      line-height: 1.4; /* Đặt chiều cao dòng = 1.4 × cỡ chữ */
     }
-  </style>
-  
-</head>
-<body>
-   <!-- Thanh điều hướng ngang (trên cùng) -->
- <style>
-    body {
-      margin: 0;
-      font-family: Arial, sans-serif;
-    }
+   
 
   </style>
+  
 </head>
 <body>
 
@@ -67,18 +58,14 @@
     </div>    
     <nav class="top-nav">
     <a href="/mainvoca" ><img src="/image/back.png" width="80"></a>
-    </div>
-  </ul>
-</nav>
+    </nav>
   </header>
 
-  <script>
-    function toggleMenu() {
-      document.getElementById('nav-list').classList.toggle('show');
-    }
-  </script>
+
+<!--nội dung-->
 <h1 style="text-align: center; color: #013e5c;">Từ vựng đa nghĩa</h1>
-  <div class="container">
+
+<div class="container">
     <div class="word-block">
       <div class="word-title">Bank</div>
       <div class="meanings">ngân hàng / bờ sông</div>
