--- a/public/html/cumdanhtu.html
+++ b/public/html/cumdanhtu.html
@@ -6,7 +6,7 @@
   <title>cụm danh từ</title>
   <link rel="stylesheet" href="/css/style.css">
   <link rel ="stylesheet" href = "/css/style.cumtu.thanhngu.css">
-
+  
 </head>
 <body>
    <!-- Thanh điều hướng ngang (trên cùng) -->
@@ -22,14 +22,15 @@
 </nav>
   </header>
 
+<!--nội dung-->
 <h1>Cụm danh từ hay gặp trong TOEIC</h1>
-
+<!--thanh tìm kiếm-->
 <div class="search-container">
   <input type="text" id="searchInput" placeholder=" Nhập từ khóa để tìm kiếm...">
 </div>
 
 <div class="table-wrapper">
-  <table id = "1">
+  <table >
     <thead>
     <tr>
         <th>STT</th>
@@ -480,7 +481,7 @@
     </tr>
     <tr>
         <td>89</td>
-        <td>Chuỗi cung ứng</td>
+        <td>Supply Chain and Logistics</td>
         <td>Chuỗi cung ứng </td>
     </tr>
     <tr>
@@ -538,10 +539,10 @@
         <td>Market segmentation</td>
         <td>Phân khúc thị trường </td>
     </tr>
-
+    <script src="/js/script.cumtu.thanhngu.js" > </script>
     </tbody>
 </table>
 </div>
-<script src="/js/script.cumtu.thanhngu.js" ></script>
+
 </body>
 </html>
